# Rook

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml  railpack.json  railway.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 36bb0c766cba_saas_foundation_users_leagues_credits.py  42e87b841448_add_draft_token_to_users.py  44c2d67384de_widen_auction_history_source_column.py  4bde60987b65_add_market_value_metadata_table.py  72257c0fcc6b_add_user_preferences_table.py  877b4d574363_add_unique_constraint_user_leagues.py  a066cc8eebeb_add_oline_numerics_to_team_systems.py  a14e9307405a_add_agent_cache_and_api_usage_log_tables.py  a1b2c3d4e5f6_add_draft_metadata_columns.py  a1c2e3f4b5d6_add_suspended_at_to_user_leagues.py  a7b8c9d0e1f2_add_run_block_stuff_rate_to_team_systems.py  a8b9c0d1e2f3_unique_player_profiles_player_id.py  b2d3e4f5a6c7_add_roster_slots_to_user_leagues.py  b7c8d9e0f1a2_add_beat_signal_article_url.py  b8c9d0e1f2a3_add_league_metadata_columns.py  c1d2e3f4a5b6_create_market_value_historic.py  c3d4e5f6a7b8_add_injury_status_to_players.py  c8d9e0f1a2b3_add_player_format_values.py  c9d0e1f2a3b4_add_my_team_id_binding.py  cc060e304351_cascade_delete_league_auction_history.py  ce8a4596b413_drop_legacy_league_settings.py  d0e1f2a3b4c5_free_tier_rename_and_season_expiry.py  d1a2b3c4e5f7_hybrid_valuation_columns.py  d4e5f6a7b8c9_add_espn_yahoo_ids_to_players.py  d5e6f7a8b9c0_add_gsis_id_to_players.py  d7e8f9a0b1c2_add_depth_chart_order_to_players.py  d9e0f1a2b3c4_add_player_format_values_prose.py  e0f1a2b3c4d5_add_player_format_values_adp_auction.py  e1f2a3b4c5d6_add_draft_status.py  e2f3a4b5c6d7_identity_corruption_cleanup.py  e4f5a6b7c8d9_add_adp_fields_to_players.py  e5080c08637b_stage28_platform_credentials_manager_map.py  e5f6a7b8c9d0_add_availability_discount_to_players.py  e699ea58b823_add_rookie_evaluation_fields.py  efb14aff0790_add_league_settings_table.py  f1a2b3c4d5e6_merge_duplicate_player_rows.py  f2a3b4c5d6e7_add_my_team_id_source.py  f5a6b7c8d9e0_add_snake_rank_diff_flag_to_players.py  (+5 more)
backend/: config.py  content.py  database.py  db_guard.py  main.py  scoring.py
docs/: AGENTS.md  APP_DESIGN.md  ARCHITECTURE.md  AUDIT.md  INSEASON.md  LIVE_DRAFT.md  espn_resolver_design.md  sleeper_resolver_design.md  stripe_billing_design.md  trade_acceptability_design.md  trade_agent_design.md  trade_lineup_value_design.md  trade_value_availability_design.md  trade_value_trajectory_design.md
extension/: README.md  manifest.json  package-lock.json  package.json  webpack.config.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
scripts/: _fix_qb_valuations.py  _sanity_valuations.py  backfill_kicker_gsis.py  backfill_news_article_urls.py  backfill_platform_ids.py  backfill_profile_fingerprints.py  backtest_accuracy.py  build_brand_assets.py  build_favicons.py  clear_invalid_valuations.py  clear_qb_profiles.py  compute_valuations.py  dedupe_yahoo_player_ids.py  hunter_market_immateriality.py  market_free_dryrun.py  merge_suffix_duplicates.py  migrate_dev_to_prod.py  migrate_validate.py  phaseB_null_anchor_fix.py  populate_nfl_seasons_played.py  prod_migration_classify.py  prod_snapshot.py  recompute_adp_diff.py  recompute_snake_flags.py  refresh_dev_db.py  refresh_market_values.py  reshape_phase1_baseline.py  reshape_phase2_rb_stress.py  run_predraft_pipeline.py  seed_demo_league.py  seed_draft_picks.py  seed_league_settings.py  seed_nfl_data.py  snapshot_values.py  stripe_seed_test.py  sync_adp.py  sync_rosters.py  test_yahoo_live.py  verify_systems.py
tests/: conftest.py
(+548 files in other folders)
