[project]
name = "fantasy-football-ai"
version = "0.1.0"
description = "AI-powered fantasy football management platform"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",  # never imported directly — FastAPI form parsing
    "websockets>=12.0",         # never imported directly — uvicorn WS protocol

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",          # never imported directly — postgresql+asyncpg driver
    "alembic>=1.13.0",

    # Config / settings
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",     # never imported directly — pydantic-settings env_file loader

    # AI
    "anthropic>=0.25.0",

    # HTTP
    "httpx>=0.27.0",
    "requests>=2.31.0",         # backend/integrations/sleeper.py — Sleeper API

    # Auth (Clerk JWT verification)
    "python-jose[cryptography]>=3.3.0",
    "svix>=1.21.0",

    # Billing (Stripe subscriptions — Checkout redirect + webhook)
    "stripe>=9.0.0",

    # Encryption (platform credentials)
    "cryptography>=42.0.0",

    # Scheduling
    "apscheduler>=3.10.4",

    # Browser automation (live draft room)
    "playwright>=1.43.0",

    # NFL data
    "nfl_data_py>=0.3.3",

    # Scraping / feeds
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.11",
    "lxml>=5.2.0",              # never imported directly — BeautifulSoup parser backend (overthecap.py)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-httpx>=0.30.0",
    "freezegun>=1.4.0",         # tests/unit/test_seasons.py — frozen clock
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv]
override-dependencies = [
    "pandas>=2.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Put the repo root on sys.path so `backend` and `scripts` import reliably
# regardless of how pytest is invoked (matters on a clean CI runner).
pythonpath = ["."]
